--- a/requirements.txt
+++ b/requirements.txt
@@ -1,112 +1,77 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-annotated-types=0.7.0=pypi_0
-blas=1.0=mkl
-blis=1.2.0=pypi_0
-brotli-python=1.0.9=py311h5da7b33_9
-bzip2=1.0.8=h2bbff1b_6
-ca-certificates=2024.12.31=haa95532_0
-catalogue=2.0.10=pypi_0
-certifi=2024.12.14=py311haa95532_0
-charset-normalizer=3.4.1=pypi_0
-click=8.1.8=pypi_0
-cloudpathlib=0.20.0=pypi_0
-colorama=0.4.6=pypi_0
-confection=0.1.5=pypi_0
-contourpy=1.3.1=pypi_0
-cpuonly=2.0=0
-cycler=0.12.1=pypi_0
-cymem=2.0.11=pypi_0
-en-core-web-sm=3.8.0=pypi_0
-filelock=3.13.1=py311haa95532_0
-fonttools=4.55.3=pypi_0
-freetype=2.12.1=ha860e81_0
-giflib=5.2.2=h7edc060_0
-gmpy2=2.1.2=py311h7f96b67_0
-idna=3.10=pypi_0
-intel-openmp=2023.1.0=h59b6b97_46320
-jinja2=3.1.5=pypi_0
-jpeg=9e=h827c3e9_3
-kiwisolver=1.4.8=pypi_0
-langcodes=3.5.0=pypi_0
-language-data=1.3.0=pypi_0
-lcms2=2.16=hb4a4139_0
-lerc=4.0.0=h5da7b33_0
-libdeflate=1.22=h5bf469e_0
-libffi=3.4.4=hd77b12b_1
-libjpeg-turbo=2.0.0=h196d8e1_0
-libpng=1.6.39=h8cc25b3_0
-libtiff=4.5.1=h44ae7cf_1
-libuv=1.48.0=h827c3e9_0
-libwebp=1.3.2=hbc33d0d_0
-libwebp-base=1.3.2=h3d04722_1
-lz4-c=1.9.4=h2bbff1b_1
-marisa-trie=1.2.1=pypi_0
-markdown-it-py=3.0.0=pypi_0
-markupsafe=3.0.2=pypi_0
-matplotlib=3.10.0=pypi_0
-mdurl=0.1.2=pypi_0
-mkl=2023.1.0=h6b88ed4_46358
-mkl-service=2.4.0=py311h827c3e9_2
-mkl_fft=1.3.11=py311h827c3e9_0
-mkl_random=1.2.8=py311hea22821_0
-mpc=1.1.0=h7edee0f_1
-mpfr=4.0.2=h62dcd97_1
-mpir=3.0.0=hec2e145_1
-mpmath=1.3.0=py311haa95532_0
-murmurhash=1.0.12=pypi_0
-networkx=3.4.2=py311haa95532_0
-numpy=2.2.1=pypi_0
-numpy-base=2.0.1=py311hd01c5d8_1
-openjpeg=2.5.2=hae555c5_0
-openssl=3.0.15=h827c3e9_0
-packaging=24.2=pypi_0
-pandas=2.2.3=pypi_0
-pillow=11.0.0=py311h096bfcc_1
-pip=24.2=py311haa95532_0
-preshed=3.0.9=pypi_0
-pydantic=2.10.5=pypi_0
-pydantic-core=2.27.2=pypi_0
-pygments=2.19.1=pypi_0
-pyparsing=3.2.1=pypi_0
-pysocks=1.7.1=py311haa95532_0
-python=3.11.11=h4607a30_0
-python-dateutil=2.9.0.post0=pypi_0
-pytorch=2.5.1=py3.11_cpu_0
-pytorch-mutex=1.0=cpu
-pytz=2024.2=pypi_0
-pyyaml=6.0.2=py311h827c3e9_0
-requests=2.32.3=py311haa95532_1
-rich=13.9.4=pypi_0
-setuptools=75.1.0=py311haa95532_0
-shellingham=1.5.4=pypi_0
-six=1.17.0=pypi_0
-smart-open=7.1.0=pypi_0
-spacy=3.8.4=pypi_0
-spacy-legacy=3.0.12=pypi_0
-spacy-loggers=1.0.5=pypi_0
-sqlite=3.45.3=h2bbff1b_0
-srsly=2.5.1=pypi_0
-sympy=1.13.3=py311haa95532_0
-tbb=2021.8.0=h59b6b97_0
-thinc=8.3.4=pypi_0
-tk=8.6.14=h0416ee5_0
-torchaudio=2.5.1=py311_cpu
-torchvision=0.20.1=py311_cpu
-tqdm=4.67.1=pypi_0
-typer=0.15.1=pypi_0
-typing_extensions=4.12.2=py311haa95532_0
-tzdata=2024.2=pypi_0
-urllib3=2.3.0=py311haa95532_0
-vc=14.40=haa95532_2
-vs2015_runtime=14.42.34433=h9531ae6_2
-wasabi=1.1.3=pypi_0
-weasel=0.4.1=pypi_0
-wheel=0.44.0=py311haa95532_0
-win_inet_pton=1.1.0=py311haa95532_0
-wrapt=1.17.2=pypi_0
-xz=5.4.6=h8cc25b3_1
-yaml=0.2.5=he774522_0
-zlib=1.2.13=h8cc25b3_1
-zstd=1.5.6=h8880b57_0
+annotated-types==0.7.0
+blis==1.2.0
+Brotli @ file:///C:/b/abs_c415aux9ra/croot/brotli-split_1736182803933/work
+catalogue==2.0.10
+certifi @ file:///C:/b/abs_59o0xj7aav/croot/certifi_1734473304008/work/certifi
+charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
+click==8.1.8
+cloudpathlib==0.20.0
+colorama==0.4.6
+comm==0.2.2
+confection==0.1.5
+contourpy==1.3.1
+cycler==0.12.1
+cymem==2.0.11
+debugpy==1.8.5
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+filelock @ file:///C:/b/abs_f2gie28u58/croot/filelock_1700591233643/work
+fonttools==4.55.3
+gmpy2 @ file:///C:/ci_311/gmpy2_1677743390134/work
+idna==3.10
+ipykernel==6.29.5
+Jinja2 @ file:///C:/b/abs_ddyeze2h6_/croot/jinja2_1730903330414/work
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.8
+langcodes==3.5.0
+language_data==1.3.0
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe @ file:///C:/b/abs_a9k8j__c_q/croot/markupsafe_1736370039866/work
+matplotlib==3.10.0
+mdurl==0.1.2
+mkl-service==2.4.0
+mkl_fft @ file:///C:/Users/dev-admin/mkl/mkl_fft_1730823082242/work
+mkl_random @ file:///C:/Users/dev-admin/mkl/mkl_random_1730822522280/work
+mpmath @ file:///C:/b/abs_7833jrbiox/croot/mpmath_1690848321154/work
+murmurhash==1.0.12
+networkx @ file:///C:/b/abs_b054htfn9t/croot/networkx_1737043671910/work
+numpy @ file:///C:/b/abs_0123vcxhf8/croot/numpy_and_numpy_base_1725470331966/work/dist/numpy-2.0.1-cp311-cp311-win_amd64.whl#sha256=46eb5850478cda64bda6d2f2d3d6ad8ceeb7cc168b83532e4f9dbbcb42e22ab2
+packaging==24.2
+pandas==2.2.3
+pillow @ file:///C:/b/abs_56j2irkr90/croot/pillow_1734430606717/work
+platformdirs==4.3.6
+preshed==3.0.9
+pydantic==2.10.5
+pydantic_core==2.27.2
+Pygments==2.19.1
+pyparsing==3.2.1
+PySocks @ file:///C:/ci_311/pysocks_1676425991111/work
+python-dateutil==2.9.0.post0
+pytz==2024.2
+pywin32==306
+PyYAML @ file:///C:/b/abs_14xkfs39bx/croot/pyyaml_1728657968772/work
+pyzmq==26.2.0
+requests @ file:///C:/b/abs_c3508vg8ez/croot/requests_1731000584867/work
+rich==13.9.4
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+spacy==3.8.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
+sympy @ file:///C:/b/abs_4ay0cgwu2w/croot/sympy_1734629241647/work
+thinc==8.3.4
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
+tqdm==4.67.1
+typer==0.15.1
+typing_extensions @ file:///C:/b/abs_0ffjxtihug/croot/typing_extensions_1734714875646/work
+tzdata==2024.2
+urllib3 @ file:///C:/b/abs_7bst06lizn/croot/urllib3_1737133657081/work
+wasabi==1.1.3
+weasel==0.4.1
+win-inet-pton @ file:///C:/ci_311/win_inet_pton_1676425458225/work
+wrapt==1.17.2
