--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,6 @@
-annotated-types==0.7.0
-blis==1.2.0
-catalogue==2.0.10
-click==8.1.8
-cloudpathlib==0.20.0
-colorama==0.4.6
-comm==0.2.2
-confection==0.1.5
-contourpy==1.3.1
-cycler==0.12.1
-cymem==2.0.11
-debugpy==1.8.5
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-fonttools==4.55.3
-idna==3.10
-ipykernel==6.29.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kiwisolver==1.4.8
-langcodes==3.5.0
-language_data==1.3.0
-marisa-trie==1.2.1
-markdown-it-py==3.0.0
-matplotlib==3.10.0
-mdurl==0.1.2
-mkl-service==2.4.0
-murmurhash==1.0.12
-packaging==24.2
-pandas==2.2.3
-platformdirs==4.3.6
-preshed==3.0.9
-pydantic==2.10.5
-pydantic_core==2.27.2
-Pygments==2.19.1
-pyparsing==3.2.1
-python-dateutil==2.9.0.post0
-pytz==2024.2
-pywin32==306
-pyzmq==26.2.0
-rich==13.9.4
-shellingham==1.5.4
-six==1.17.0
-smart-open==7.1.0
-spacy==3.8.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.5.1
-thinc==8.3.4
-torch==2.5.1
-torchaudio==2.5.1
-torchvision==0.20.1
-tqdm==4.67.1
-typer==0.15.1
-tzdata==2024.2
-wasabi==1.1.3
-weasel==0.4.1
-wrapt==1.17.2
+torch 
+torchvision
+pandas
+numpy
+matplotlib
+collections
